# dbus-activatable-wrapper

./: LICENSE  README.md  desktop.in  meson.build  meson_options.txt  service.in  wrapper.in
